# Fairy-Chess

./: .gitignore  .travis.yml  CMakeLists.txt  Chess.love  LICENSE  README.md  bishop.moon  conf.moon  config.moon  dummy.moon  helper.moon  knight.moon  main.moon  pawn.moon  piece.moon  piece_move_count.moon  queen.moon  rook.moon  sandbox.moon  settings.json  util.moon
love2d/: assets.moon  conf.moon  main.moon  settings.json
love2d-modules/: assets.moon  settings.moon
pieces/: pawn.moon  queen.moon
scripts/: conf.moon  main.moon
scripts/pieces/: bishop.moon  knight.moon  piece.moon  util.moon
src/: custom_handlers.cpp  custom_handlers.h  main.cpp  options.cpp  options.h
